[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["peyton glover <peyton.vx@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"

[tool.poetry.dev-dependencies]
djangorestframework = "^3.12.1"
django-cors-headers = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
